# Chemical-Reaction-Rate-Prediction-ML

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  chemical_reaction_data_advanced.csv  coool.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  setup.py  vercel.json
.github/workflows/: ci.yml  cli.yml
api/: README.md  __init__.py  auth.py  database.py  main.py  models.py
api/routes/: auth.py  simulation.py
app/: README.md  streamlit_app.py
configs/: config.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INSTALLATION.md  PHASE2_GUIDE.md  PHASE3_GUIDE.md  PHASE4_GUIDE.md  VELOG.md
examples/: phase2_demo.py  phase3_gnn_demo.py  phase4_uncertainty_demo.py
experiments/: README.md  ablation_study.py  benchmark.py  novel_contributions_demo.py  run_experiments.sh  statistical_analysis.py
frontend/: Dockerfile.prod  README.md  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalyticsTab.tsx  ConcentrationDashboard.tsx  ConditionsPanel.tsx  EnergyProfileChart.tsx  ModelsTab.tsx  PredictionResults.tsx  PredictionTab.tsx  ReactionPathGraph.tsx  SMILESInput.tsx  SimulationPanel.tsx
frontend/src/lib/: api.ts  simulation-api.ts
src/: __init__.py  main.py
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  info.py  validate.py
src/cli/utils/: __init__.py  ascii_art.py  console.py  validators.py
src/data/: data_generator.py  data_loader.py  reaction_dataset.py  reaction_network_dataset.py  smiles_parser.py  uspto_loader.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  molecular_features.py
src/models/: __init__.py  base_model.py  traditional_models.py
src/models/gnn/: __init__.py  gnn_models.py  molecular_graph.py  trainer.py
src/models/novel/: README.md  (+6 more)
src/simulation/: __init__.py  arrhenius_utils.py  kmc_solver.py
src/utils/: visualization.py
tests/: __init__.py  test_data_generator.py  test_metrics.py  test_models.py  test_reaction_dataset.py  test_smiles_parser.py
tests/cli/: __init__.py  test_ascii_art.py  test_main.py  test_validators.py
tests/data/: test_reaction_network_dataset.py
tests/integration/: test_kmc_pipeline.py
tests/models/: test_hybrid_model_v2.py
tests/simulation/: test_kmc_solver.py  test_rpg.py
(+7 files in other folders)
